Fixed button sizing on mobile - featureScroll

--- a/src/styles/featureScroll.scss
+++ b/src/styles/featureScroll.scss
@@ -150,7 +150,7 @@
             .moreWrapper{
                 padding:10px;
                 margin-top:60px;
-                width:100%;
+                //width:100%;
                 height:80px;
                 box-sizing: border-box;
                 .more{
